--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai5.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai5.html
@@ -14,18 +14,18 @@
     let diemCuoiKy = +prompt("nhap diem cuoi ky");
     if ( (diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=8)
     {
-        alert("gioi")
+        alert("gioi");
     }
     else if ((diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=6.5 )
     {
-        alert("Kha")
+        alert("Kha");
     }
     else if ((diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=5 )
     {
-        alert("Trung Binh ")
+        alert("Trung Binh ");
     }
     else
     {
-        alert("yeu")
+        alert("yeu");
     }
 </script>
