--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai1.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai1.html
@@ -9,6 +9,6 @@
 </body>
 </html>
 <script>
-    let doC = +prompt("nhap do C")
+    let doC = +prompt("nhap do C");
     alert("do F :  " +(doC*9/5+32));
 </script>
