--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai11.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai11.html
@@ -17,30 +17,28 @@
 </body>
 </html>
 <script>
-let thuNhap = +prompt(" muc thu nhap ca nhan ");
-if(thuNhap<=4)
-{
-    alert("muc thu nhap " +thuNhap);
-}
-if(thuNhap<=6){
-    alert("muc thu nhap"+ (thuNhap-(thuNhap*5)/100))
-}
-if(thuNhap<=9){
-    alert("muc thu nhap " +  (thuNhap-(thuNhap*10)/100))
-}
-if(thuNhap<=14){
-    alert("muc thu nhap " +  (thuNhap-(thuNhap*15)/100))
-}
-if(thuNhap<=24){
-    alert("muc thu nhap " +  (thuNhap-(thuNhap*20)/100))
-}
-if(thuNhap<=44){
-    alert("muc thu nhap " +  (thuNhap-(thuNhap*25)/100))
-}
-if(thuNhap<=84){
-    alert("muc thu nhap " +  (thuNhap-(thuNhap*30)/100))
-}
-else {
-    alert("muc thu nhap "+  (thuNhap-(thuNhap*35)/100))
-}
+    let thuNhap = +prompt(" muc thu nhap ca nhan ");
+    if (thuNhap <= 4) {
+        alert("muc thu nhap " + thuNhap);
+    }
+    if (thuNhap <= 6) {
+        alert("muc thu nhap" + (thuNhap - (thuNhap * 5) / 100));
+    }
+    if (thuNhap <= 9) {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 10) / 100));
+    }
+    if (thuNhap <= 14) {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 15) / 100));
+    }
+    if (thuNhap <= 24) {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 20) / 100));
+    }
+    if (thuNhap <= 44) {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 25) / 100));
+    }
+    if (thuNhap <= 84) {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 30) / 100));
+    } else {
+        alert("muc thu nhap " + (thuNhap - (thuNhap * 35) / 100));
+    }
 </script>
