--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai8.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai8.html
@@ -11,9 +11,9 @@
 <script>
     let nhapTuoi = +prompt(" nhap vao tuoi ");
     if ( nhapTuoi <120 && nhapTuoi>0){
-        alert("la tuoi cua mot nguoi")
+        alert("la tuoi cua mot nguoi");
     }
     else {
-        alert("khong phai tuoi")
+        alert("khong phai tuoi");
     }
 </script>
