--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai2.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai2.html
@@ -14,6 +14,6 @@
         alert(" khong du tuoi vao lop 10 ");
     }
     else{
-        alert("du");
+        alert("du tuoi ");
     }
 </script>
