--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai4.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai4.html
@@ -12,5 +12,5 @@
 <Script>
     let canhA = +prompt("nhap canh a");
     let canhB =  +prompt("nhap canh b");
-    alert("dien tich hinh chu nhat la "+ canhA*canhB)
+    alert("dien tich hinh chu nhat la "+ canhA*canhB);
 </Script>
