--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai9.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai9.html
@@ -16,6 +16,9 @@
         if ((canhA + canhB > canhC) && (canhA + canhC > canhB) && (canhB + canhC > canhA)) {
             alert("la 3 canh cua tam giac");
         }
+        else {
+            alert("khong phai 3 canh cua tam giac");
+        }
     } else {
         alert("khong phai la 3 canh cua tam giac");
     }
