--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai3.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai3.html
@@ -10,12 +10,11 @@
 </html>
 <script>
     let number = +prompt("nhap so vao ");
-    if (number>0){
+    if (number > 0) {
         alert(number + "  lon hon 0");
-    }
-    else if (number<0){
+    } else if (number < 0) {
         alert(number + "  nho hon 0");
-    } else{
+    } else {
         alert(number + " bang 0 ");
     }
 </script>
