--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai4.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai4.html
@@ -9,17 +9,14 @@
 </body>
 </html>
 <script>
-let number1= +prompt("nhap so  :");
-let number2= +prompt("nhap  so :");
-let number3 = +prompt("nhap  so :");
-    if(number1 > number2 && number1 >number3){
+    let number1 = +prompt("nhap so  :");
+    let number2 = +prompt("nhap  so :");
+    let number3 = +prompt("nhap  so :");
+    if (number1 > number2 && number1 > number3) {
         alert(number1 + "lon nhat");
-    }
-    else if (number2>number3)
-    {
-        alert(number2+ "lon nhat");
-    }
-    else {
+    } else if (number2 > number3) {
+        alert(number2 + "lon nhat");
+    } else {
         alert(number3 + " lon nhat");
     }
 </script>
