--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai5.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai5.html
@@ -9,23 +9,16 @@
 </body>
 </html>
 <script>
-    let diemKiemTra = +prompt("nhap diem kiem tra") ;
+    let diemKiemTra = +prompt("nhap diem kiem tra");
     let diemGiuaKy = +prompt("nhap diem giua ky");
     let diemCuoiKy = +prompt("nhap diem cuoi ky");
-    if ( (diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=8)
-    {
+    if ((diemKiemTra * 2 + diemGiuaKy * 3 + diemCuoiKy * 5) / 10 >= 8) {
         alert("gioi");
-    }
-    else if ((diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=6.5 )
-    {
+    } else if ((diemKiemTra * 2 + diemGiuaKy * 3 + diemCuoiKy * 5) / 10 >= 6.5) {
         alert("Kha");
-    }
-    else if ((diemKiemTra*2+diemGiuaKy*3+diemCuoiKy*5)/10>=5 )
-    {
+    } else if ((diemKiemTra * 2 + diemGiuaKy * 3 + diemCuoiKy * 5) / 10 >= 5) {
         alert("Trung Binh ");
-    }
-    else
-    {
+    } else {
         alert("yeu");
     }
 </script>
