--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai6.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai6.html
@@ -11,15 +11,12 @@
 <script>
     let doanhSo = +prompt("Nhap doanh so ban hang");
     const giaSanPham = 1;
-    if(doanhSo>300)
-    {
-        alert("Hoa hong nhan duoc la : " + (giaSanPham*doanhSo*20)/100+".000");
-        }
-    else if (doanhSo>100){
-        alert("Hoa hong nhan duoc la : " + (giaSanPham*doanhSo*10)/100+".000");
-    }
-    else{
-        alert("Hoa hong nhan duoc la : " + (giaSanPham*doanhSo*5)/100+".000");
+    if (doanhSo > 300) {
+        alert("Hoa hong nhan duoc la : " + (giaSanPham * doanhSo * 20) / 100 + ".000");
+    } else if (doanhSo > 100) {
+        alert("Hoa hong nhan duoc la : " + (giaSanPham * doanhSo * 10) / 100 + ".000");
+    } else {
+        alert("Hoa hong nhan duoc la : " + (giaSanPham * doanhSo * 5) / 100 + ".000");
     }
 
 
