--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai9.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai9.html
@@ -15,8 +15,7 @@
     if (canhA > 0 && canhB > 0 && canhC > 0) {
         if ((canhA + canhB > canhC) && (canhA + canhC > canhB) && (canhB + canhC > canhA)) {
             alert("la 3 canh cua tam giac");
-        }
-        else {
+        } else {
             alert("khong phai 3 canh cua tam giac");
         }
     } else {
