--- a/ss9_cau_truc_dieu_kien2/bai_tap/ung_dung_do_you_love_me.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/ung_dung_do_you_love_me.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #loveQuestion
-        {
+        #loveQuestion {
             position: absolute;
-            left :600px;
-            top :350px;
+            left: 600px;
+            top: 350px;
         }
+
         #btnYes {
             position: absolute;
             left: 580px;
@@ -25,15 +25,15 @@
         }
 
     </style>
-<script src="ung_dung_do_you_love_me.js">
+    <script src="ung_dung_do_you_love_me.js">
 
-</script>
+    </script>
 </head>
 <body>
 <form>
     <h1 id="loveQuestion">Do you love me?</h1>
-    <input type="button" id="btnYes" value="CÓ" onclick="yesClick()" />
-    <input type="button" id="btnNo" value="KHÔNG" onmouseover="noHover()" />
+    <input type="button" id="btnYes" value="CÓ" onclick="yesClick()"/>
+    <input type="button" id="btnNo" value="KHÔNG" onmouseover="noHover()"/>
 </form>
 </body>
 </html>
