--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai2.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai2.html
@@ -10,10 +10,9 @@
 </html>
 <script>
     let age = prompt("Nhap tuoi : ");
-    if ( age < 15 ){
+    if (age < 15) {
         alert(" khong du tuoi vao lop 10 ");
-    }
-    else{
+    } else {
         alert("du tuoi ");
     }
 </script>
