--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai10.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai10.html
@@ -19,28 +19,22 @@
 <script>
 
 
+    let kWh = +prompt(" nhap so hWh su dung : ");
 
-    let kWh = +prompt (" nhap so hWh su dung : ");
+    if (kWh <= 50) {
+        alert("tien dien :" + 1.678 * kWh);
 
-    if ( kWh <= 50 ){
-        alert("tien dien :"+1.678*kWh );
+    } else if (kWh <= 100) {
+        alert("tien dien :" + ((1.678 * 50) + ((kWh - 50) * 1.734)));
+    } else if (kWh <= 200) {
+        alert("tien dien :" + (1.678 * 50 + 1.734 * 50 + (kWh - 100) * 2.014));
 
-    }
-    else if(kWh<=100){
-        alert("tien dien :" +((1.678*50)+((kWh-50)*1.734)) );
-    }
-    else if(kWh<=200){
-        alert("tien dien :" +(1.678*50+1.734*50+(kWh-100)*2.014));
-
-    }
-    else if(kWh<=300){
-        alert("tien dien :" +(1.678*50+1.734*50+100*2.014+(kWh-200)*2.536 ));
-    }
-    else if(kWh<=400){
-        alert("tien dien :"  +(1.678*50+1.734*50+100*2.014+2.536*100+(kWh-300)*2.834) );
-    }
-    else{
-        alert("tien dien :" +(1.678*50+1.734*50+100*2.014+2.536*100+2.834*100+ (kWh-400)*2.927 ));
+    } else if (kWh <= 300) {
+        alert("tien dien :" + (1.678 * 50 + 1.734 * 50 + 100 * 2.014 + (kWh - 200) * 2.536));
+    } else if (kWh <= 400) {
+        alert("tien dien :" + (1.678 * 50 + 1.734 * 50 + 100 * 2.014 + 2.536 * 100 + (kWh - 300) * 2.834));
+    } else {
+        alert("tien dien :" + (1.678 * 50 + 1.734 * 50 + 100 * 2.014 + 2.536 * 100 + 2.834 * 100 + (kWh - 400) * 2.927));
     }
 
 
