--- a/ss10_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/su_dung_vong_lap_long_nhau.html
+++ b/ss10_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/su_dung_vong_lap_long_nhau.html
@@ -19,5 +19,5 @@
         sout = sout + "</tr>";
     }
     sout = sout + "</table>";
-    document.write(sout)
+    document.write(sout);
 </script>
