--- a/ss10_cau_truc_lap/thuc_hanh/su_dung_vong_lap_while/bai1.html
+++ b/ss10_cau_truc_lap/thuc_hanh/su_dung_vong_lap_while/bai1.html
@@ -10,7 +10,7 @@
 </html>
 <script>
     let tong = 0;
-    let nhapSo = +prompt("nhap vao 1 so ");
+    let nhapSo = 0;
     while (nhapSo !== -1) {
         nhapSo = +prompt("nhap vao 1 so ");
         tong = tong + nhapSo;
