--- a/ss11_cau_truc_lap2/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
+++ b/ss11_cau_truc_lap2/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
@@ -16,12 +16,12 @@
             if (countSnt < number) {
                 for (let j = 1; j <= i; j++) {
                     if (i % j == 0) {
-                        count = count+1 ;
+                        count ++ ;
                     }
                 }
                 if (count == 2) {
                     document.write(i + "<br>");
-                    countSnt +=1 ;
+                    countSnt++;
                 }
                 count = 0;
 
