--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai1.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai1.html
@@ -14,10 +14,10 @@
 </html>
 <script>
     let count = 0;
-    let A = [];
+    let array = [];
     let display = "";
     for (let i = 1; i <= 10; i++) {
-        A[i] = prompt("Nhap phan tu thu " + i + "la");
+        array[i] = prompt("Nhap phan tu thu " + i + "la");
         display += A[i] + " ";
         if (A[i] >= 10) {
             count = count + 1;
