--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai3.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai3.html
@@ -10,24 +10,22 @@
 </body>
 </html>
 <script>
-    let A = [];
-    let display = "";
+    let array = [];
+
     let local = 0;
     let max = 0;
     let total_average = 0;
     for (let i = 0; i < 10; i++) {
-        A[i] = +prompt("Nhap phan tu thu " + i + " la");
-        display += A[i] + " ";
-
+        array[i] = +prompt("Nhap phan tu thu " + i + " la");
     }
-    alert("mang la " + display)
+    alert("mang la " + array)
     for (let i = 0; i < 10; i++) {
-        if (max < A[i]) {
-            max = A[i];
+        if (max < array[i]) {
+            max = array[i];
             local = i;
         }
-        total_average += A[i];
+        total_average += array[i];
     }
-    total_average = total_average/A.length;
-    alert("gia tri lon nhat la " + max + " vi tri  " + local+"gia tri trung binh la  "+total_average);
+    total_average = total_average / array.length;
+    alert("gia tri lon nhat la " + max + " vi tri  " + local + "gia tri trung binh la  " + total_average);
 </script>
