--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai4.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai4.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Viết chương trình khởi tạo/nhập vào một mảng số nguyên và đảo ngược các phần tử trong mảng đó.</title>
 </head>
 <body>
 
 </body>
 </html>
 <script>
-    let A = [];
+    let array = [];
     for (let i = 0; i < 10; i++) {
-        A[i] = +prompt("Nhap phan tu thu " + i + " la");
+        array[i] = +prompt("Nhap phan tu thu " + i + " la");
     }
-    alert("mang la " + A.reverse());
+    alert("mang la " + array.reverse());
 </script>
