--- a/ss13_mang2/bai_tap/su_dung_cac_ham_co_san_cua_mang/bai2.html
+++ b/ss13_mang2/bai_tap/su_dung_cac_ham_co_san_cua_mang/bai2.html
@@ -9,9 +9,9 @@
 </body>
 </html>
 <script>
-    const num=window.prompt();
-    const str = num.toString();
-    const result = [str[0]];
+    let num= prompt("Nhap vao mot chuoi");
+    let str = num.toString();
+    let result = [str[0]];
 
     for(let x=1; x<str.length; x++)
     {
