--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai5.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai5.html
@@ -9,7 +9,8 @@
 </body>
 </html>
 <script>
-    let arrayNumber = [], array_Number_Negative = [];
+    let arrayNumber = [];
+    let array_Number_Negative = [];
 
     for (let i = 0; i < 10; i++) {
         arrayNumber[i] = Number(prompt("Nhập số vào mảng"));
