--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai7.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai7.html
@@ -13,7 +13,8 @@
 </body>
 </html>
 <script>
-    let array = [], boo = true;
+    let array = [];
+    let boo = true;
     let arraynew = [];
 
     for (let i = 0; i < 10; i++) {
