--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai9.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai9.html
@@ -11,7 +11,9 @@
 </body>
 </html>
 <script>
-    let array1 = [], array2 = [], array3 = [];
+    let array1 = [] ;
+    let array2 = [];
+    let array3 = [];
     for (let i = 0; i < 10; i++) {
         let arr1 = +prompt("enter array1");
         array1.push(arr1);
