--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai8.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai8.html
@@ -11,7 +11,8 @@
 </body>
 </html>
 <script>
-    let array = [], min = 0;
+    let array = [];
+    let min = 0;
 
     for (let i = 0; i < 10; i++) {
         array[i] = +prompt("Nhập số vào mảng");
@@ -20,10 +21,10 @@
 
     for (let i = 0; i < array.length - 1; i++) {
         for (let j = i + 1; j < array.length; j++) {
-            if (array[i] > array[j]) {
+            if (array[i] < array[j]) {
                 min = array[i];
                 array[i] = array[j];
-                array[j] = min
+                array[j] = min;
             }
         }
     }
