--- a/ss13_mang2/bai_tap/luyen_tap_mang02/bai5.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang02/bai5.html
@@ -15,18 +15,18 @@
     let string2 = prompt("enter string 2");
     let compare = true;
     document.write("string 1 : " + string1 + " <br>" + "string 2 : " + string2 + " <br>");
-    if (string1.length != string2.length) {
+    if (string1.length !== string2.length) {
         document.write("2 string dissimilarity <br>");
     } else {
-        for (let i = 0; i < string1.length; i++) {
-            for (let j = 0; j < string2.length; j++) {
-                if (string1[i] === string2[j]) {
-                    compare = true;
-                } else {
-                    compare = false;
-                }
+
+        for (let i = 0; i < string2.length; i++) {
+            if (string1[i] === string2[i]) {
+                compare = true;
+            } else {
+                compare = false;
             }
         }
+
         if (compare === false) {
             document.write("2 string dissimilarity");
         } else {
