--- a/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai4.html
+++ b/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai4.html
@@ -9,7 +9,9 @@
 </body>
 </html>
 <script>
-    let F0 = 0, F1 = 1, F = 0;
+    let F = 0;
+    let F0 = 1;
+    let F1 = 0;
     fibonacci = " "
     for (let i = 0; i < 10; i++) {
         F = F0 + F1;
