--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai6.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai6.html
@@ -19,9 +19,9 @@
         arrayNumber[i] = prompt("Nhập số vào mảng");
     }
     document.write("arrayNumber = [" + arrayNumber + "]<br>");
-    let enter_Element = prompt("nhập phần tử cần tìm");
+    let enterElement = prompt("nhập phần tử cần tìm");
     for (let i = 0; i < arrayNumber.length; i++) {
-        if (enter_Element === arrayNumber[i]) {
+        if (enterElement === arrayNumber[i]) {
             count++;
         }
 
