--- a/ss13_mang2/bai_tap/tu_dien.html
+++ b/ss13_mang2/bai_tap/tu_dien.html
@@ -15,17 +15,17 @@
 <script>
     function transcript() {
 
-        let arr_eng = ["banana", "apple", "orange", "pen", "pencil", "book"];
-        let arr_vie = ["chuối", "táo", "cam", "bút", "bút chì", "sách"];
+        let arrayEng = ["banana", "apple", "orange", "pen", "pencil", "book"];
+        let arrayViet = ["chuối", "táo", "cam", "bút", "bút chì", "sách"];
         let string = document.getElementById("string").value;
-        let index_eng = 0;
+        let indexEng = 0;
         let result = "";
-        for (let i = 0; i < arr_eng.length; i++) {
-            if (string === arr_eng[i]) {
-                index_eng = i;
-                for (let j = 0; j < arr_vie.length; j++) {
-                    if (index_eng === j) {
-                        result = arr_vie[j];
+        for (let i = 0; i < arrayEng.length; i++) {
+            if (string === arrayEng[i]) {
+                indexEng = i;
+                for (let j = 0; j < arrayViet.length; j++) {
+                    if (indexEng === j) {
+                        result = arrayViet[j];
                     }
                 }
             }
