--- a/ss5_html_form_and_table/bai_tap/tao_form_don_gian2.html
+++ b/ss5_html_form_and_table/bai_tap/tao_form_don_gian2.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td>Ngày sinh</td>
-            <td><input name="birthday" value="date" type="number"/></td>
+            <td><input name="birthday" value="date" type="numberber"/></td>
 
         </tr>
         <tr>
