--- a/ss11_cau_truc_lap2/bai_tap/bang_cuu_chuong.html
+++ b/ss11_cau_truc_lap2/bai_tap/bang_cuu_chuong.html
@@ -11,7 +11,9 @@
 
 <h1>Bảng cửu chương</h1>
 <script>
-    let sout, i, j;
+    let sout;
+    let i;
+    let j;
     sout = "<table  border='1' width='300' cellspacing='0' cellpadding='15'>";
     // debugger;
     for (i = 1; i <= 10; i++) {
@@ -20,7 +22,7 @@
             sout = sout + "<td>" + j + "*" + i + "=" + i * j + "</td>";
         }
         sout = sout + "</tr>";
-    //     // j = 1;
+        //     // j = 1;
     }
     sout = sout + "</table>";
     document.write(sout);
