--- a/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai3.html
+++ b/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai3.html
@@ -9,7 +9,9 @@
 </body>
 </html>
 <script>
-    let F = 0, F0 = 1, F1 = 0;
+    let F = 0;
+    let F0 = 1;
+    let F1 = 0;
     let fibonacci = "";
     // let tong = 0;
     for (let i = 0; i < 20; i++) {
