--- a/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai8.html
+++ b/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/bai8.html
@@ -9,29 +9,30 @@
 </body>
 </html>
 <button onclick="doanSo()">Choi</button>
+<!--/de yeu cau` anh-->
 <script>
     function doanSo() {
 
         let number = +prompt("Số bạn muốn đoán trong khoảng lớn nhất là bao nhiêu?");
-        let number_ran = Math.floor(Math.random() * number);
-        let number_check = +prompt("Nhập số bạn đoán");
+        let numberRan = Math.floor(Math.random() * number);
+        let numberCheck = +prompt("Nhập số bạn đoán");
         let count = 0;
-        while (number_check !== number_ran) {
+        while (numberCheck !== numberRan) {
             count++;
             if (count === 4) {
                 alert("hết lượt rồi . quá ngu");
                 break;
-            } else if (number_check < number_ran) {
+            } else if (numberCheck < numberRan) {
                 alert("đoán cao lên ");
             } else {
                 alert("đoán thấp xuống ");
             }
-            number_check = +prompt("Nhập số bạn đoán");
+            numberCheck = +prompt("Nhập số bạn đoán");
         }
         if (count === 4) {
-            document.write("Bạn hết số lần đoán")
+            document.write("Bạn hết số lần đoán");
         } else {
-            document.write("Bạn đã đoán đúng số. Chúc mừng bạn!")
+            document.write("Bạn đã đoán đúng số. Chúc mừng bạn!");
         }
     }
 </script>
@@ -39,21 +40,21 @@
 <!--    function doanso() {-->
 <!--        debugger;-->
 <!--        let number = +prompt("Số bạn muốn đoán trong khoảng lớn nhất là bao nhiêu?")-->
-<!--        let number_ran = Math.floor(Math.random() * number);-->
-<!--        console.log(number_ran);-->
-<!--        let number_check = +prompt ("Nhập số bạn đoán");-->
+<!--        let numberRan = Math.floor(Math.random() * number);-->
+<!--        console.log(numberRan);-->
+<!--        let numberCheck = +prompt ("Nhập số bạn đoán");-->
 <!--        let count = 0;-->
-<!--        while (number_check !== number_ran) {-->
+<!--        while (numberCheck !== numberRan) {-->
 <!--            count++;-->
 <!--            if (count == 4) {-->
 <!--                alert("Bạn hết số lần đoán")-->
 <!--                break;-->
-<!--            } else if (number_check < number_ran) {-->
+<!--            } else if (numberCheck < numberRan) {-->
 <!--                alert("Số bạn đoán bé hơn");-->
 <!--            } else {-->
 <!--                alert ("Số bạn đoán lớn hơn")-->
 <!--            }-->
-<!--            number_check = prompt ("Nhập số bạn đoán");-->
+<!--            numberCheck = prompt ("Nhập số bạn đoán");-->
 <!--        }-->
 <!--        if (count == 4) {-->
 <!--            document.write("Bạn hết số lần đoán")-->
