--- a/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_02/bai1.html
+++ b/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_02/bai1.html
@@ -9,7 +9,9 @@
 </body>
 </html>
 <script>
-    let F = 0, F0 = 1, F1 = 0;
+    let F = 0;
+    let F0 = 1;
+    let F1 = 0;
     let fibonacci = "";
 
     for (let i = 0; i < 30; i++) {
