--- a/ss13_mang2/bai_tap/luyen_tap_mang01/bai5.html
+++ b/ss13_mang2/bai_tap/luyen_tap_mang01/bai5.html
@@ -10,15 +10,15 @@
 </html>
 <script>
     let arrayNumber = [];
-    let array_Number_Negative = [];
+    let arrayNumberNegative = [];
 
     for (let i = 0; i < 10; i++) {
         arrayNumber[i] = Number(prompt("Nhập số vào mảng"));
         if (arrayNumber[i] < 0) {
-            array_Number_Negative.push(arrayNumber[i]);
+            arrayNumberNegative.push(arrayNumber[i]);
         }
     }
     document.write("arrayNumber = [" + arrayNumber + "]<br>");
-    document.write("Mảng các số âm gồm " + array_Number_Negative.length + " phần tử mangsoam = [" + array_Number_Negative + "]<br>");
+    document.write("Mảng các số âm gồm " + arrayNumberNegative.length + " phần tử mangsoam = [" + arrayNumberNegative + "]<br>");
 
 </script>
