--- a/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/test.html
+++ b/ss11_cau_truc_lap2/bai_tap/luyen_tap_vong_lap_01/test.html
@@ -9,14 +9,10 @@
 </body>
 </html>
 <script>
-    let points = [40, 100, 1, 5, 25, 10]
-    points.sort(function(a, b) {
-        return a - b
-    })
-    document.write(points + "<br>");
-
-    points.sort(function(a, b) {
-        return b - a
-    })
-    document.write(points);
+    function func1(a){
+        if(a ===2)
+            return 2;
+        return a * func1(a - 1);
+    }
+    alert (func1(5))
 </script>
