--- a/ss5_html_form_and_table/thuc_hanh/tao_form_co_ban.html
+++ b/ss5_html_form_and_table/thuc_hanh/tao_form_co_ban.html
@@ -28,8 +28,7 @@
     <input type="text" name="lastname" placeholder="LastName" size="15"/>
     <p>EMAIL
     </p>
-    <input type="text" name="EMAIL
-" size="35"/>
+    <input type="text" name="EMAIL" size="35"/>
     <p>Phone Number</p>
     <input type="text" name="phone1" size="5"/> -
     <input type="text" name="phone2" size="5"/> -
