--- a/ss13_mang2/bai_tap/su_dung_cac_ham_co_san_cua_mang/bai3.html
+++ b/ss13_mang2/bai_tap/su_dung_cac_ham_co_san_cua_mang/bai3.html
@@ -14,7 +14,7 @@
     let lower = 'abcdefghijklmnopqrstuvwxyz';
     let  result = [];
 
-    for(var x=0; x<string.length; x++)
+    for(let  x=0; x<string.length; x++)
     {
         if(upper.indexOf(string[x]) !== -1)
         {
