--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai2.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai2.html
@@ -15,7 +15,7 @@
     let number = +prompt("enter number ");
 
     function increaseNumber(number) {
-        number++
+        number++;
         alert(number);
     }
 </script>
