--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai3.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai3.html
@@ -18,9 +18,11 @@
     function compareNumber(number1,number2){
         if(number1>number2){
             alert("number1 is great than number2");
+
         }
         else{
             alert(+number1+number2) ;
+            return number1+number2
         }
 
     }
