--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai1.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai1.html
@@ -9,10 +9,11 @@
 </body>
 </html>
 <script>
-    function square() {
-        let number = +prompt("nhap  1 so ");
+    let number = +prompt("nhap  1 so ");
+    function square(number) {
+
         return number * number;
     }
 
-    alert(square());
+    alert(square(number));
 </script>
