--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai2.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai2.html
@@ -10,14 +10,14 @@
 </body>
 </html>
 <script>
-    function chuViHinhTron() {
+    function chuViHinhTron(radius) {
         return 2 * 3.14 * radius;
     }
 
-    function dienTichHinhTron() {
+    function dienTichHinhTron(radius) {
         return radius * radius * 2 * 3.14;
     }
 
     let radius = +prompt("nhap ban kinh");
-    alert(chuViHinhTron() + "dien tich " + dienTichHinhTron());
+    alert(chuViHinhTron(radius) + "dien tich " + dienTichHinhTron(radius));
 </script>
