--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai6.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai6.html
@@ -10,7 +10,7 @@
 </body>
 </html>
 <script>
-    function checkInteger() {
+    function checkInteger(number) {
         if (number > 0 && number % 1 === 0) {
             return true;
         } else {
@@ -19,5 +19,5 @@
     }
 
     let number = +prompt("nhap vao 1 so ");
-    alert(checkInteger())
+    alert(checkInteger(number))
 </script>
