--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai7.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai7.html
@@ -9,7 +9,7 @@
 </body>
 </html>
 <script>
-    function changeNumber() {
+    function changeNumber(number1,number2) {
         let tam = number1;
         number1 = number2;
         number2 = tam;
@@ -18,5 +18,5 @@
 
     let number1 = +prompt("enter number1");
     let number2 = +prompt("enter number2");
-   changeNumber();
+   changeNumber(number1,number2);
 </script>
