--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai8.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai8.html
@@ -12,7 +12,7 @@
 <script>
 
 
-    function changeArray() {
+    function changeArray(size) {
         let array = [];
         for (let i = 0; i < 10; i++) {
             array[i] = +prompt("nhap mot mang ");
@@ -28,7 +28,7 @@
         }
         return array;
     }
-    alert(changeArray());
+    alert(changeArray(10));
 
 
 
