--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai4.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai4.html
@@ -11,12 +11,13 @@
 </html>
 <script>
     function addNumbers() {
-        firstNum = 4;
-        secondNum = 8;
-        result = firstNum + secondNum;
+        let firstNum = 4;
+        let secondNum = 8;
+        let result = firstNum + secondNum;
         return alert(result);
     }
-    result = 0;
+
+    let result = 0;
     alert(result);
     result = addNumbers();
 </script>
