--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai5.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham01/bai5.html
@@ -20,10 +20,10 @@
     let arrayStar2 = ["Ursa Minor", "Tarurus", "Cygnus", "Lyra", "Aquila", "Ursa Major", "Leo"];
     let star = prompt("nhap ten ngoi sao");
 
-    function checkStar() {
+    function checkStar(starName) {
         let count=0;
         for (let i = 0; i < arrayStar.length;i++) {
-            if (star === arrayStar[i]) {
+            if (starName === arrayStar[i]) {
                 alert (arrayStar2[i]) ;
             }else{
                 count++;
@@ -35,7 +35,7 @@
         }
 
     }
-    checkStar();
+    checkStar(star);
 
 </script>
 
