--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai3.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai3.html
@@ -9,7 +9,7 @@
 </body>
 </html>
 <script>
-    function factorial() {
+    function factorial(number) {
         let giaiThua = 1;
         for (let i = 1; i <= number; i++) {
             giaiThua = giaiThua * i;
@@ -18,5 +18,5 @@
     }
 
     let number = +prompt("nhap vao 1 so ");
-    alert(factorial());
+    alert(factorial(number));
 </script>
