--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai4.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai4.html
@@ -10,7 +10,7 @@
 </body>
 </html>
 <script>
-    function checkNumber(){
+    function checkNumber(number){
         if(number%2===0 || number%2===1){
             return true;
         }else{
@@ -18,5 +18,5 @@
         }
     }
     let number = +prompt("nhap vao mot ky tu");
-    alert(checkNumber())
+    alert(checkNumber(number))
 </script>
