--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai9.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/bai9.html
@@ -12,7 +12,7 @@
 </body>
 </html>
 <script>
-    function checkKyTu(){
+    function checkKyTu(size){
         let array = [];
         let count=0;
         let kyTu = prompt("nhap mot ky tu de kiem tra ");
@@ -24,5 +24,5 @@
         }
         return count ;
     }
-    alert(checkKyTu())
+    alert(checkKyTu(10))
 </script>
